<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:enabled="false"
        android:hint="0"
        android:textAlignment="viewEnd"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="60dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h1"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!--        android:text="@string/input_field_tip"-->

    <Button
        android:id="@+id/clearButton"
        style="@style/CalcButtonStyle"
        android:text="@string/clear_button_text"
        app:layout_constraintStart_toEndOf="@+id/guideline_v0"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v3"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h1"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h2" />

    <Button
        android:id="@+id/divideButton"
        style="@style/CalcButtonStyle"
        android:text="@string/divide_button_text"
        app:layout_constraintStart_toEndOf="@+id/guideline_v3"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vlast"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h1"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h2" />

    <Button
        android:id="@+id/button7"
        style="@style/CalcButtonStyle"
        android:text="@string/button7_text"
        app:layout_constraintStart_toEndOf="@+id/guideline_v0"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v1"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h2"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h3" />

    <Button
        android:id="@+id/button8"
        style="@style/CalcButtonStyle"
        android:text="@string/button8_text"
        app:layout_constraintStart_toEndOf="@+id/guideline_v1"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v2"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h2"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h3" />

    <Button
        android:id="@+id/button9"
        style="@style/CalcButtonStyle"
        android:text="@string/button9_text"
        app:layout_constraintStart_toEndOf="@+id/guideline_v2"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v3"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h2"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h3" />

    <Button
        android:id="@+id/multiplyButton"
        style="@style/CalcButtonStyle"
        android:text="@string/multiply_button_text"
        app:layout_constraintStart_toEndOf="@+id/guideline_v3"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vlast"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h2"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h3" />

    <Button
        android:id="@+id/button4"
        style="@style/CalcButtonStyle"
        android:text="@string/button4_text"
        app:layout_constraintStart_toEndOf="@+id/guideline_v0"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v1"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h3"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h4" />

    <Button
        android:id="@+id/button5"
        style="@style/CalcButtonStyle"
        android:text="@string/button5_text"
        app:layout_constraintStart_toEndOf="@+id/guideline_v1"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v2"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h3"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h4" />

    <Button
        android:id="@+id/button6"
        style="@style/CalcButtonStyle"
        android:text="@string/button6_text"
        app:layout_constraintStart_toEndOf="@+id/guideline_v2"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v3"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h3"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h4" />

    <Button
        android:id="@+id/subtractButton"
        style="@style/CalcButtonStyle"
        android:text="@string/minus_button_text"
        app:layout_constraintStart_toEndOf="@+id/guideline_v3"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vlast"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h3"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h4" />


    <Button
        android:id="@+id/button1"
        style="@style/CalcButtonStyle"
        android:text="@string/button1_text"
        app:layout_constraintStart_toEndOf="@+id/guideline_v0"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v1"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h4"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h5" />

    <Button
        android:id="@+id/button2"
        style="@style/CalcButtonStyle"
        android:text="@string/button2_text"
        app:layout_constraintStart_toEndOf="@+id/guideline_v1"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v2"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h4"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h5" />

    <Button
        android:id="@+id/button3"
        style="@style/CalcButtonStyle"
        android:text="@string/button3_text"
        app:layout_constraintStart_toEndOf="@+id/guideline_v2"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v3"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h4"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h5" />

    <Button
        android:id="@+id/addButton"
        style="@style/CalcButtonStyle"
        android:text="@string/plus_button_text"
        app:layout_constraintStart_toEndOf="@+id/guideline_v3"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vlast"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h4"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h5"/>

    <Button
        android:id="@+id/button0"
        style="@style/CalcButtonStyle"
        android:text="@string/button0_text"
        app:layout_constraintStart_toEndOf="@+id/guideline_v0"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v2"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h5"
        app:layout_constraintBottom_toTopOf="@+id/guideline_hlast" />

    <Button
        android:id="@+id/dotButton"
        style="@style/CalcButtonStyle"
        android:text="@string/dot_button_text"
        app:layout_constraintStart_toEndOf="@+id/guideline_v2"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v3"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h5"
        app:layout_constraintBottom_toTopOf="@+id/guideline_hlast" />

    <Button
        android:id="@+id/equalButton"
        style="@style/CalcButtonStyle"
        android:text="@string/equals_button_text"
        app:layout_constraintStart_toEndOf="@+id/guideline_v3"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vlast"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h5"
        app:layout_constraintBottom_toTopOf="@+id/guideline_hlast" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.36" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.52" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.68" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.84" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hlast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.27" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.54" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.81" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vlast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>
